samples/_failures_safe/1761004295_9d5e1a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_472db3a6.c: In function ‘main’:
./samples/SAFE/__tmp_472db3a6.c:158:9: error: expected declaration or statement at end of input
  158 |         printf("Failed to allocate matrices\n");
      |         ^~~~~~
./samples/SAFE/__tmp_472db3a6.c:158:9: error: expected declaration or statement at end of input
